# ChemML2026

./: README.md  Tuma_Ann.inp
.github/workflows/: check-docker-uv.yml
dir_0/: My_Name  Shiyanenko_Konstantin  my_name
dir_1/Afanasiev_Alexey/: Dockerfile  pyproject.toml  train.py
dir_1/KulievRauf/: .dockerignore  generate_data.py  pyproject.toml  train.py
dir_1/Kuznetsov_Mikhail/: .dockerignore  train.py
dir_1/Kuznetsov_Mikhail/data/: molecules.csv
dir_1/Kuznetsov_Mikhail/output/: best_params.json  metrics.json
dir_1/Kuznetsov_Mikhail/results/: metrics.json
dir_1/Schneider_Mark/: Dockerfile  generate_data.py  pyproject.toml  train.py
dir_1/Shlykov_Ivan/: generate_data.py  pyproject.toml  train.py
dir_1/Афанасьев_Алексей/: .dockerignore  Dockerfile  generate_data.py
dir_1/Тума_Анна/: Dockerfile  generate_data.py  train.py
dir_2/: Dudakov_Ivan.ipynb
